fix: various fixes, check PR #1
